[package]
name = "Sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
qt_charts = "0.5.0"
rand = "0.8.2"
itertools = "0.9.0"
array2d = "0.2.1"

[build-dependencies]
qt_ritual_build = "0.5.0"
